tests/files/parser_tests/should_fail/054.cmdr
//Should not parse do while loop
do {
   echo hi;
} while true);